--- a/CarDealersSystem/MongoDBModule/MongoDBModule.csproj
+++ b/CarDealersSystem/MongoDBModule/MongoDBModule.csproj
@@ -47,12 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MongoDataInserter.cs" />
     <Compile Include="MongoDataReader.cs" />
     <Compile Include="Make.cs" />
     <Compile Include="Car.cs" />
-    <Compile Include="Database.cs" />
+    <Compile Include="DataEntry.cs" />
     <Compile Include="Dealer.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="MongoDBConnector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type.cs" />
