Import to SQL from zip added

--- a/CarDealersSystem/CarDealersSystem.ConsoleClient/CarDealersSystem.ConsoleClient.csproj
+++ b/CarDealersSystem/CarDealersSystem.ConsoleClient/CarDealersSystem.ConsoleClient.csproj
@@ -68,6 +68,10 @@
       <Project>{d4d8c047-47c2-4973-9a29-3068309935cd}</Project>
       <Name>CarDealersSystem.MongoDbSynchronizator</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ZipExcelExtractor\ZipExcelExtractor.csproj">
+      <Project>{82b7f078-b255-4315-821e-953c6e5d7fa5}</Project>
+      <Name>ZipExcelExtractor</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
