--- a/CarDealersSystem/packages/repositories.config
+++ b/CarDealersSystem/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\CarDealersSystem.MongoDbSynchronizator\packages.config" />
   <repository path="..\CarDealersSystem\packages.config" />
   <repository path="..\MongoDBModule\packages.config" />
+  <repository path="..\ZipExcelExtractor\packages.config" />
 </repositories>
