--- a/CarDealersSystem/CarDealersSystem.Models/CarDealersSystem.Models.csproj
+++ b/CarDealersSystem/CarDealersSystem.Models/CarDealersSystem.Models.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Make.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesReport.cs" />
     <Compile Include="Type.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
