Load Data from XML(Task 5) implemented.

--- a/CarDealersSystem/CarDealersSystem.Models/CarDealersSystem.Models.csproj
+++ b/CarDealersSystem/CarDealersSystem.Models/CarDealersSystem.Models.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Car.cs" />
     <Compile Include="Dealer.cs" />
+    <Compile Include="LooseReport.cs" />
     <Compile Include="Make.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
