--- a/CarDealersSystem/MongoDBModule/MongoDBModule.csproj
+++ b/CarDealersSystem/MongoDBModule/MongoDBModule.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DealersIncomes.cs" />
+    <Compile Include="LooseReport.cs" />
     <Compile Include="MongoDataInserter.cs" />
     <Compile Include="MongoDataReader.cs" />
     <Compile Include="Make.cs" />
@@ -55,14 +55,20 @@
     <Compile Include="DataEntry.cs" />
     <Compile Include="Dealer.cs" />
     <Compile Include="Model.cs" />
-    <Compile Include="MongoDBConnector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type.cs" />
+    <Compile Include="Importer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XmlController\XmlController.csproj">
+      <Project>{1dbfec59-c3d9-4fbe-9333-313fd687e1fe}</Project>
+      <Name>XmlController</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
