--- a/CarDealersSystem/CarDealersSystem.Reporters/CarDealersSystem.Reporters.csproj
+++ b/CarDealersSystem/CarDealersSystem.Reporters/CarDealersSystem.Reporters.csproj
@@ -39,6 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp">
+      <HintPath>..\packages\iTextSharp.5.5.2\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -56,6 +59,8 @@
   <ItemGroup>
     <Compile Include="Contracts\IReporter.cs" />
     <Compile Include="JsonReporter.cs" />
+    <Compile Include="Builders\PDFBuilder.cs" />
+    <Compile Include="PDFReporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportModels\JsonReport.cs" />
   </ItemGroup>
