--- a/CarDealersSystem/MongoDBModule/MongoDBModule.csproj
+++ b/CarDealersSystem/MongoDBModule/MongoDBModule.csproj
@@ -55,7 +55,7 @@
     <Compile Include="DataEntry.cs" />
     <Compile Include="Dealer.cs" />
     <Compile Include="Model.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="EntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type.cs" />
     <Compile Include="Importer.cs" />
